# lolrust

./: .gitignore  Cargo.toml  README.md
examples/: broken.meow  fizzbuzz.meow  guessing_game.meow  hello.meow  hunt_the_red_dot.meow
lolrust-vscode/: language-configuration.json  package.json  snippets.json
lolrust-vscode/syntaxes/: meow.tmLanguage.json
src/: explain.rs  keywords.rs  kibble.rs  lib.rs  logo.rs  main.rs  transpiler.rs  wasm.rs
tests/: transpile_tests.rs
