[package]
name = "lolrust"
version = "0.2.0"
edition = "2021"
description = "A transpiler from .meow (lolcat Rust) to valid Rust. i can haz rust?"
license = "MIT"
repository = "https://github.com/AdaInTheLab/lolrust"
homepage = "https://github.com/AdaInTheLab/lolrust"
documentation = "https://github.com/AdaInTheLab/lolrust#readme"
readme = "README.md"
keywords = ["lolcat", "transpiler", "esolang", "language", "meow"]
categories = ["command-line-utilities", "compilers", "development-tools"]
exclude = [
    "examples/*.exe",
    "examples/*.pdb",
    "examples/*.rs",
    "lolrust-vscode/**",
    "hero-banner.jpg",
    "target/**",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
wasm-bindgen = { version = "0.2", optional = true }
